fix margin, paddings / align content

--- a/sass/layout/_resume.scss
+++ b/sass/layout/_resume.scss
@@ -27,6 +27,8 @@
 
     &__title {
         text-align: center;
+        margin-bottom: 0.5rem;
+        font-size: 2.1rem;
 
         @include breakpoint-up(medium) {
             font-size: 2.8rem;
@@ -55,7 +57,7 @@
         }
 
         .job {
-            font-size: 1.225rem;
+            font-size: 1.025rem;
             font-weight: light;
             color: rgb(70, 70, 70);
             margin-bottom: 3rem;
@@ -73,6 +75,7 @@
         }
 
         .contact-wrap {
+
             i {
                 font-size: 1.4625rem;
                 color: $blue;
@@ -82,7 +85,7 @@
             p,
             a {
                 letter-spacing: 0.03rem;
-                font-size: 0.975rem;
+                font-size: 0.815rem;
 
             }
 
@@ -95,6 +98,10 @@
     }
 
     &__profile {
+        h3 {
+            font-size: 1.5rem;
+        }
+
         p {
             position: relative;
             text-align: justify;
@@ -132,6 +139,9 @@
 
         .resume__content__left {
 
+            h3 {
+                font-size: 1.5rem;
+            }
 
             .degree {
                 font-size: 1.025rem;
@@ -168,6 +178,10 @@
         .resume__content__right {
             position: relative;
 
+            h3 {
+                font-size: 1.5rem;
+            }
+
             .experience {
 
 
@@ -176,15 +190,24 @@
                 }
 
                 .title {
-                    font-weight: bold;
-                    font-size: 1rem;
+                    font-weight: normal;
+                    font-size: 1.1rem;
                     letter-spacing: 0;
                     line-height: 1.1;
+                    margin-bottom: 0.3rem;
+                }
+
+                .date {
+                    margin-top: 0rem;
+                    margin-bottom: 2rem;
+                    font-style: italic;
                 }
 
                 .desc {
                     li {
                         font-size: 0.9rem;
+                        margin-bottom: 0.6rem;
+                        line-height: 1.4;
 
                         @include breakpoint-up(large) {
                             font-size: 1.1rem;
@@ -192,6 +215,10 @@
                     }
 
                     margin-bottom: 2.4rem;
+                }
+
+                .place {
+                    margin-top: 0rem;
                 }
             }
 
